syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

import "gateway.proto";
import "types.proto";

package container;

service ContainerService {
  rpc ContainerKill(ContainerKillRequest) returns (ContainerKillResponse) {}
  rpc ContainerStatus(ContainerStatusRequest)
      returns (ContainerStatusResponse) {}
  rpc ContainerExec(ContainerExecRequest) returns (ContainerExecResponse) {}
  rpc ContainerStreamLogs(ContainerStreamLogsRequest)
      returns (stream ContainerLogEntry) {}
  rpc ContainerArchive(ContainerArchiveRequest)
      returns (stream ContainerArchiveResponse) {}
  rpc ContainerSyncWorkspace(gateway.SyncContainerWorkspaceRequest)
      returns (gateway.SyncContainerWorkspaceResponse) {}
  rpc ContainerSandboxExec(ContainerSandboxExecRequest)
      returns (ContainerSandboxExecResponse) {}
  rpc ContainerSandboxStatus(ContainerSandboxStatusRequest)
      returns (ContainerSandboxStatusResponse) {}
  rpc ContainerSandboxStdout(ContainerSandboxStdoutRequest)
      returns (ContainerSandboxStdoutResponse) {}
  rpc ContainerSandboxStderr(ContainerSandboxStderrRequest)
      returns (ContainerSandboxStderrResponse) {}
  rpc ContainerSandboxKill(ContainerSandboxKillRequest)
      returns (ContainerSandboxKillResponse) {}
  rpc ContainerSandboxListFiles(ContainerSandboxListFilesRequest)
      returns (ContainerSandboxListFilesResponse) {}
  rpc ContainerSandboxUploadFile(ContainerSandboxUploadFileRequest)
      returns (ContainerSandboxUploadFileResponse) {}
  rpc ContainerSandboxDownloadFile(ContainerSandboxDownloadFileRequest)
      returns (ContainerSandboxDownloadFileResponse) {}
  rpc ContainerSandboxStatFile(ContainerSandboxStatFileRequest)
      returns (ContainerSandboxStatFileResponse) {}
  rpc ContainerSandboxDeleteFile(ContainerSandboxDeleteFileRequest)
      returns (ContainerSandboxDeleteFileResponse) {}
  rpc ContainerSandboxCreateDirectory(ContainerSandboxCreateDirectoryRequest)
      returns (ContainerSandboxCreateDirectoryResponse) {}
  rpc ContainerSandboxDeleteDirectory(ContainerSandboxDeleteDirectoryRequest)
      returns (ContainerSandboxDeleteDirectoryResponse) {}
  rpc ContainerSandboxExposePort(ContainerSandboxExposePortRequest)
      returns (ContainerSandboxExposePortResponse) {}
}

message ContainerKillRequest { string container_id = 1; }

message ContainerKillResponse { bool ok = 1; }

message ContainerExecRequest {
  string container_id = 1;
  string cmd = 2;
  repeated string env = 3;
}

message ContainerExecResponse { bool ok = 1; }

message ContainerStatusRequest { string container_id = 1; }

message ContainerStatusResponse { bool running = 1; }

message ContainerStreamLogsRequest { string container_id = 1; }

message ContainerLogEntry { string msg = 1; }

message ContainerArchiveRequest {
  string container_id = 1;
  string image_id = 2;
}

message ContainerArchiveResponse {
  bool done = 1;
  bool success = 2;
  int32 progress = 3;
  string error_msg = 4;
}

message ContainerSandboxExecRequest {
  string container_id = 1;
  string cmd = 2;
  string cwd = 3;
  map<string, string> env = 4;
  bool interactive = 5;
}

message ContainerSandboxExecResponse {
  bool ok = 1;
  string error_msg = 2;
  int32 pid = 3;
}

message ContainerSandboxStatusRequest {
  string container_id = 1;
  int32 pid = 2;
}

message ContainerSandboxStatusResponse {
  bool ok = 1;
  string error_msg = 2;
  string status = 3;
  int32 exit_code = 4;
}

message ContainerSandboxStdoutRequest {
  string container_id = 1;
  int32 pid = 2;
}

message ContainerSandboxStdoutResponse {
  bool ok = 1;
  string error_msg = 2;
  string stdout = 3;
}

message ContainerSandboxStderrRequest {
  string container_id = 1;
  int32 pid = 2;
}

message ContainerSandboxStderrResponse {
  bool ok = 1;
  string error_msg = 2;
  string stderr = 3;
}

message ContainerSandboxKillRequest {
  string container_id = 1;
  int32 pid = 2;
}

message ContainerSandboxKillResponse {
  bool ok = 1;
  string error_msg = 2;
}

message ContainerSandboxListFilesRequest {
  string container_id = 1;
  string container_path = 2;
}

message ContainerSandboxListFilesResponse {
  bool ok = 1;
  string error_msg = 2;
  repeated types.FileInfo files = 3;
}

message ContainerSandboxDeleteFileRequest {
  string container_id = 1;
  string container_path = 2;
}

message ContainerSandboxDeleteFileResponse {
  bool ok = 1;
  string error_msg = 2;
}

message ContainerSandboxCreateDirectoryRequest {
  string container_id = 1;
  string container_path = 2;
}

message ContainerSandboxCreateDirectoryResponse {
  bool ok = 1;
  string error_msg = 2;
}

message ContainerSandboxDeleteDirectoryRequest {
  string container_id = 1;
  string container_path = 2;
}

message ContainerSandboxDeleteDirectoryResponse {
  bool ok = 1;
  string error_msg = 2;
}

message ContainerSandboxUploadFileRequest {
  string container_id = 1;
  string container_path = 2;
  bytes data = 3;
  int32 mode = 4;
}

message ContainerSandboxUploadFileResponse {
  bool ok = 1;
  string error_msg = 2;
}

message ContainerSandboxDownloadFileRequest {
  string container_id = 1;
  string container_path = 2;
}

message ContainerSandboxDownloadFileResponse {
  bool ok = 1;
  string error_msg = 2;
  bytes data = 3;
}

message ContainerSandboxExposePortRequest {
  string container_id = 1;
  int32 port = 2;
}

message ContainerSandboxExposePortResponse {
  bool ok = 1;
  string error_msg = 2;
}

message ContainerSandboxStatFileRequest {
  string container_id = 1;
  string container_path = 2;
}

message ContainerSandboxStatFileResponse {
  bool ok = 1;
  string error_msg = 2;
  types.FileInfo file_info = 3;
}